[tool.poetry]
name = "elordenador_lib"
version = "0.1.0"
description = "elordenador's libraries"
authors = ["Daniel <danilacasito8@gmail.com>"]
license = "GGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
